Implemented about page and contact page

--- a/views/partials/user/header.ejs
+++ b/views/partials/user/header.ejs
@@ -123,7 +123,7 @@
                                     <ul>
                                         <li class="dropdown-holder"><a href="/">Home</a></li>
                                         <li class="megamenu-holder"><a href="/shop">Shop</a></li>
-                                        <li><a href="about-us">About Us</a></li>
+                                        <li><a href="about">About Us</a></li>
                                         <li><a href="contact">Contact</a></li>
                                     </ul>
                                 </nav>
