Changed category filtering

--- a/views/user/shopbyfilter.ejs
+++ b/views/user/shopbyfilter.ejs
@@ -41,7 +41,7 @@
                             </div>
 
 
-                            <div class="category-module hiraola-sidebar_categories">
+                            <!-- <div class="category-module hiraola-sidebar_categories">
                                 <div class="category-module_heading">
                                     <h5>Price</h5>
                                 </div>
@@ -57,7 +57,7 @@
                                         </li>
                                     </ul>
                                 </div>
-                            </div>
+                            </div> -->
 
 
                         </div>
